# 2FAuth-TUI

./: .gitignore  README.md  pyproject.toml
src/twofauth_tui/: __init__.py  app.py  client.py  models.py  security.py  storage.py
twofauth_tui/: __init__.py  __main__.py
