[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "2FAuth-TUI"
version = "0.1.0"
description = "Terminal UI for 2FAuth"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27",
  "platformdirs>=4.0",
  "textual>=0.80",
]

[project.scripts]
2FAuth-TUI = "twofauth_tui.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
